nav a hover color contrast issue solved

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -155,7 +155,7 @@ nav a {
 
 /* nav a change added february 6 2026 */
 nav a:hover {
-    color: var(--accent1-color);
+    color: var(--accent5-color);
     background-color: var(--accent3-color);
 }
 
